# src/routers/router.go
@@ -2,7 +2,7 @@ package routes
 
 import (
 	"tax-travel-tracker/src/handlers"
-	"tax-travel-tracker/src/handlers/middleware"
+	_"tax-travel-tracker/src/handlers/middleware"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -21,13 +21,21 @@ func SetupRouter() *gin.Engine {
 
     	// Travel Tracker API routes
 	travelGroup := router.Group("/travel-tracker")
-	travelGroup.Use(middleware.AuthMiddleware())
+	// travelGroup.Use(middleware.AuthMiddleware())
 	{
 		travelGroup.POST("", handlers.CreateTravelRecordHandler)
 		travelGroup.GET("/:id", handlers.GetTravelRecordHandler)
 		travelGroup.PUT("/:id", handlers.UpdateTravelRecordHandler)
 		travelGroup.DELETE("/:id", handlers.DeleteTravelRecordHandler)
 		travelGroup.GET("", handlers.GetAllTravelRecordsHandler)
+
+	}
+
+	milageGroup := router.Group("/mileage")
+	// travelGroup.Use(middleware.AuthMiddleware())
+	{
+		milageGroup.GET("/:id", handlers.GetMilageRecordHandler)
+		milageGroup.GET("", handlers.GetAllMileageRecordsHandler)
 
 	}
 
